add disableSubmodules for git artificats

--- a/manifests/base/crds/full/argoproj.io_clusterworkflowtemplates.yaml
+++ b/manifests/base/crds/full/argoproj.io_clusterworkflowtemplates.yaml
@@ -370,6 +370,8 @@ spec:
                             depth:
                               format: int64
                               type: integer
+                            disableSubmodules:
+                              type: boolean
                             fetch:
                               items:
                                 type: string
@@ -1302,6 +1304,8 @@ spec:
                           depth:
                             format: int64
                             type: integer
+                          disableSubmodules:
+                            type: boolean
                           fetch:
                             items:
                               type: string
@@ -2729,6 +2733,8 @@ spec:
                                           depth:
                                             format: int64
                                             type: integer
+                                          disableSubmodules:
+                                            type: boolean
                                           fetch:
                                             items:
                                               type: string
@@ -3097,6 +3103,8 @@ spec:
                                                 depth:
                                                   format: int64
                                                   type: integer
+                                                disableSubmodules:
+                                                  type: boolean
                                                 fetch:
                                                   items:
                                                     type: string
@@ -3506,6 +3514,8 @@ spec:
                                   depth:
                                     format: int64
                                     type: integer
+                                  disableSubmodules:
+                                    type: boolean
                                   fetch:
                                     items:
                                       type: string
@@ -4398,6 +4408,8 @@ spec:
                                 depth:
                                   format: int64
                                   type: integer
+                                disableSubmodules:
+                                  type: boolean
                                 fetch:
                                   items:
                                     type: string
@@ -4854,6 +4866,8 @@ spec:
                                 depth:
                                   format: int64
                                   type: integer
+                                disableSubmodules:
+                                  type: boolean
                                 fetch:
                                   items:
                                     type: string
@@ -7401,6 +7415,8 @@ spec:
                             depth:
                               format: int64
                               type: integer
+                            disableSubmodules:
+                              type: boolean
                             fetch:
                               items:
                                 type: string
@@ -8828,6 +8844,8 @@ spec:
                                             depth:
                                               format: int64
                                               type: integer
+                                            disableSubmodules:
+                                              type: boolean
                                             fetch:
                                               items:
                                                 type: string
@@ -9196,6 +9214,8 @@ spec:
                                                   depth:
                                                     format: int64
                                                     type: integer
+                                                  disableSubmodules:
+                                                    type: boolean
                                                   fetch:
                                                     items:
                                                       type: string
@@ -9605,6 +9625,8 @@ spec:
                                     depth:
                                       format: int64
                                       type: integer
+                                    disableSubmodules:
+                                      type: boolean
                                     fetch:
                                       items:
                                         type: string
@@ -10497,6 +10519,8 @@ spec:
                                   depth:
                                     format: int64
                                     type: integer
+                                  disableSubmodules:
+                                    type: boolean
                                   fetch:
                                     items:
                                       type: string
@@ -10953,6 +10977,8 @@ spec:
                                   depth:
                                     format: int64
                                     type: integer
+                                  disableSubmodules:
+                                    type: boolean
                                   fetch:
                                     items:
                                       type: string
