--- a/manifests/base/crds/full/argoproj.io_cronworkflows.yaml
+++ b/manifests/base/crds/full/argoproj.io_cronworkflows.yaml
@@ -391,6 +391,8 @@ spec:
                                 depth:
                                   format: int64
                                   type: integer
+                                disableSubmodules:
+                                  type: boolean
                                 fetch:
                                   items:
                                     type: string
@@ -1323,6 +1325,8 @@ spec:
                               depth:
                                 format: int64
                                 type: integer
+                              disableSubmodules:
+                                type: boolean
                               fetch:
                                 items:
                                   type: string
@@ -2750,6 +2754,8 @@ spec:
                                               depth:
                                                 format: int64
                                                 type: integer
+                                              disableSubmodules:
+                                                type: boolean
                                               fetch:
                                                 items:
                                                   type: string
@@ -3118,6 +3124,8 @@ spec:
                                                     depth:
                                                       format: int64
                                                       type: integer
+                                                    disableSubmodules:
+                                                      type: boolean
                                                     fetch:
                                                       items:
                                                         type: string
@@ -3527,6 +3535,8 @@ spec:
                                       depth:
                                         format: int64
                                         type: integer
+                                      disableSubmodules:
+                                        type: boolean
                                       fetch:
                                         items:
                                           type: string
@@ -4419,6 +4429,8 @@ spec:
                                     depth:
                                       format: int64
                                       type: integer
+                                    disableSubmodules:
+                                      type: boolean
                                     fetch:
                                       items:
                                         type: string
@@ -4875,6 +4887,8 @@ spec:
                                     depth:
                                       format: int64
                                       type: integer
+                                    disableSubmodules:
+                                      type: boolean
                                     fetch:
                                       items:
                                         type: string
@@ -7422,6 +7436,8 @@ spec:
                                 depth:
                                   format: int64
                                   type: integer
+                                disableSubmodules:
+                                  type: boolean
                                 fetch:
                                   items:
                                     type: string
@@ -8849,6 +8865,8 @@ spec:
                                                 depth:
                                                   format: int64
                                                   type: integer
+                                                disableSubmodules:
+                                                  type: boolean
                                                 fetch:
                                                   items:
                                                     type: string
@@ -9217,6 +9235,8 @@ spec:
                                                       depth:
                                                         format: int64
                                                         type: integer
+                                                      disableSubmodules:
+                                                        type: boolean
                                                       fetch:
                                                         items:
                                                           type: string
@@ -9626,6 +9646,8 @@ spec:
                                         depth:
                                           format: int64
                                           type: integer
+                                        disableSubmodules:
+                                          type: boolean
                                         fetch:
                                           items:
                                             type: string
@@ -10518,6 +10540,8 @@ spec:
                                       depth:
                                         format: int64
                                         type: integer
+                                      disableSubmodules:
+                                        type: boolean
                                       fetch:
                                         items:
                                           type: string
@@ -10974,6 +10998,8 @@ spec:
                                       depth:
                                         format: int64
                                         type: integer
+                                      disableSubmodules:
+                                        type: boolean
                                       fetch:
                                         items:
                                           type: string
