--- a/manifests/base/crds/full/argoproj.io_workfloweventbindings.yaml
+++ b/manifests/base/crds/full/argoproj.io_workfloweventbindings.yaml
@@ -113,6 +113,8 @@ spec:
                                 depth:
                                   format: int64
                                   type: integer
+                                disableSubmodules:
+                                  type: boolean
                                 fetch:
                                   items:
                                     type: string
