--- a/manifests/base/crds/full/argoproj.io_workflows.yaml
+++ b/manifests/base/crds/full/argoproj.io_workflows.yaml
@@ -379,6 +379,8 @@ spec:
                             depth:
                               format: int64
                               type: integer
+                            disableSubmodules:
+                              type: boolean
                             fetch:
                               items:
                                 type: string
@@ -1311,6 +1313,8 @@ spec:
                           depth:
                             format: int64
                             type: integer
+                          disableSubmodules:
+                            type: boolean
                           fetch:
                             items:
                               type: string
@@ -2738,6 +2742,8 @@ spec:
                                           depth:
                                             format: int64
                                             type: integer
+                                          disableSubmodules:
+                                            type: boolean
                                           fetch:
                                             items:
                                               type: string
@@ -3106,6 +3112,8 @@ spec:
                                                 depth:
                                                   format: int64
                                                   type: integer
+                                                disableSubmodules:
+                                                  type: boolean
                                                 fetch:
                                                   items:
                                                     type: string
@@ -3515,6 +3523,8 @@ spec:
                                   depth:
                                     format: int64
                                     type: integer
+                                  disableSubmodules:
+                                    type: boolean
                                   fetch:
                                     items:
                                       type: string
@@ -4407,6 +4417,8 @@ spec:
                                 depth:
                                   format: int64
                                   type: integer
+                                disableSubmodules:
+                                  type: boolean
                                 fetch:
                                   items:
                                     type: string
@@ -4863,6 +4875,8 @@ spec:
                                 depth:
                                   format: int64
                                   type: integer
+                                disableSubmodules:
+                                  type: boolean
                                 fetch:
                                   items:
                                     type: string
@@ -7410,6 +7424,8 @@ spec:
                             depth:
                               format: int64
                               type: integer
+                            disableSubmodules:
+                              type: boolean
                             fetch:
                               items:
                                 type: string
@@ -8837,6 +8853,8 @@ spec:
                                             depth:
                                               format: int64
                                               type: integer
+                                            disableSubmodules:
+                                              type: boolean
                                             fetch:
                                               items:
                                                 type: string
@@ -9205,6 +9223,8 @@ spec:
                                                   depth:
                                                     format: int64
                                                     type: integer
+                                                  disableSubmodules:
+                                                    type: boolean
                                                   fetch:
                                                     items:
                                                       type: string
@@ -9614,6 +9634,8 @@ spec:
                                     depth:
                                       format: int64
                                       type: integer
+                                    disableSubmodules:
+                                      type: boolean
                                     fetch:
                                       items:
                                         type: string
@@ -10506,6 +10528,8 @@ spec:
                                   depth:
                                     format: int64
                                     type: integer
+                                  disableSubmodules:
+                                    type: boolean
                                   fetch:
                                     items:
                                       type: string
@@ -10962,6 +10986,8 @@ spec:
                                   depth:
                                     format: int64
                                     type: integer
+                                  disableSubmodules:
+                                    type: boolean
                                   fetch:
                                     items:
                                       type: string
@@ -14145,6 +14171,8 @@ spec:
                                   depth:
                                     format: int64
                                     type: integer
+                                  disableSubmodules:
+                                    type: boolean
                                   fetch:
                                     items:
                                       type: string
@@ -14518,6 +14546,8 @@ spec:
                                   depth:
                                     format: int64
                                     type: integer
+                                  disableSubmodules:
+                                    type: boolean
                                   fetch:
                                     items:
                                       type: string
@@ -14916,6 +14946,8 @@ spec:
                             depth:
                               format: int64
                               type: integer
+                            disableSubmodules:
+                              type: boolean
                             fetch:
                               items:
                                 type: string
@@ -16206,6 +16238,8 @@ spec:
                             depth:
                               format: int64
                               type: integer
+                            disableSubmodules:
+                              type: boolean
                             fetch:
                               items:
                                 type: string
@@ -17633,6 +17667,8 @@ spec:
                                             depth:
                                               format: int64
                                               type: integer
+                                            disableSubmodules:
+                                              type: boolean
                                             fetch:
                                               items:
                                                 type: string
@@ -18001,6 +18037,8 @@ spec:
                                                   depth:
                                                     format: int64
                                                     type: integer
+                                                  disableSubmodules:
+                                                    type: boolean
                                                   fetch:
                                                     items:
                                                       type: string
@@ -18410,6 +18448,8 @@ spec:
                                     depth:
                                       format: int64
                                       type: integer
+                                    disableSubmodules:
+                                      type: boolean
                                     fetch:
                                       items:
                                         type: string
@@ -19302,6 +19342,8 @@ spec:
                                   depth:
                                     format: int64
                                     type: integer
+                                  disableSubmodules:
+                                    type: boolean
                                   fetch:
                                     items:
                                       type: string
@@ -19758,6 +19800,8 @@ spec:
                                   depth:
                                     format: int64
                                     type: integer
+                                  disableSubmodules:
+                                    type: boolean
                                   fetch:
                                     items:
                                       type: string
@@ -22323,6 +22367,8 @@ spec:
                                 depth:
                                   format: int64
                                   type: integer
+                                disableSubmodules:
+                                  type: boolean
                                 fetch:
                                   items:
                                     type: string
@@ -23255,6 +23301,8 @@ spec:
                               depth:
                                 format: int64
                                 type: integer
+                              disableSubmodules:
+                                type: boolean
                               fetch:
                                 items:
                                   type: string
@@ -24682,6 +24730,8 @@ spec:
                                               depth:
                                                 format: int64
                                                 type: integer
+                                              disableSubmodules:
+                                                type: boolean
                                               fetch:
                                                 items:
                                                   type: string
@@ -25050,6 +25100,8 @@ spec:
                                                     depth:
                                                       format: int64
                                                       type: integer
+                                                    disableSubmodules:
+                                                      type: boolean
                                                     fetch:
                                                       items:
                                                         type: string
@@ -25459,6 +25511,8 @@ spec:
                                       depth:
                                         format: int64
                                         type: integer
+                                      disableSubmodules:
+                                        type: boolean
                                       fetch:
                                         items:
                                           type: string
@@ -26351,6 +26405,8 @@ spec:
                                     depth:
                                       format: int64
                                       type: integer
+                                    disableSubmodules:
+                                      type: boolean
                                     fetch:
                                       items:
                                         type: string
@@ -26807,6 +26863,8 @@ spec:
                                     depth:
                                       format: int64
                                       type: integer
+                                    disableSubmodules:
+                                      type: boolean
                                     fetch:
                                       items:
                                         type: string
@@ -29354,6 +29412,8 @@ spec:
                                 depth:
                                   format: int64
                                   type: integer
+                                disableSubmodules:
+                                  type: boolean
                                 fetch:
                                   items:
                                     type: string
@@ -30781,6 +30841,8 @@ spec:
                                                 depth:
                                                   format: int64
                                                   type: integer
+                                                disableSubmodules:
+                                                  type: boolean
                                                 fetch:
                                                   items:
                                                     type: string
@@ -31149,6 +31211,8 @@ spec:
                                                       depth:
                                                         format: int64
                                                         type: integer
+                                                      disableSubmodules:
+                                                        type: boolean
                                                       fetch:
                                                         items:
                                                           type: string
@@ -31558,6 +31622,8 @@ spec:
                                         depth:
                                           format: int64
                                           type: integer
+                                        disableSubmodules:
+                                          type: boolean
                                         fetch:
                                           items:
                                             type: string
@@ -32450,6 +32516,8 @@ spec:
                                       depth:
                                         format: int64
                                         type: integer
+                                      disableSubmodules:
+                                        type: boolean
                                       fetch:
                                         items:
                                           type: string
@@ -32906,6 +32974,8 @@ spec:
                                       depth:
                                         format: int64
                                         type: integer
+                                      disableSubmodules:
+                                        type: boolean
                                       fetch:
                                         items:
                                           type: string
